[gd_scene load_steps=3 format=2]

[ext_resource path="res://SCRIPTS/leaderboard.gd" type="Script" id=1]
[ext_resource path="res://SCENES/leaderboard_player_template.tscn" type="PackedScene" id=2]

[node name="leaderboard" type="CanvasLayer"]
layer = -1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.105882, 0.109804, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="top_score" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Top Scores"
align = 1

[node name="description" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]

[node name="player_container" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 36.0

[node name="menu" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 7
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverPopUp" type="WindowDialog" parent="."]
margin_left = 378.867
margin_top = 222.271
margin_right = 683.867
margin_bottom = 380.271
window_title = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPopUp"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOverPopUp/VBoxContainer"]
margin_right = 305.0
margin_bottom = 28.0
size_flags_vertical = 7
text = "Game Over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_time" type="Label" parent="GameOverPopUp/VBoxContainer"]
margin_top = 32.0
margin_right = 305.0
margin_bottom = 60.0
size_flags_vertical = 7
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameOverPopUp/VBoxContainer"]
margin_top = 64.0
margin_right = 305.0
margin_bottom = 93.0
size_flags_vertical = 7
text = "Enter your name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="TextEdit" parent="GameOverPopUp/VBoxContainer"]
margin_top = 97.0
margin_right = 305.0
margin_bottom = 125.0
size_flags_vertical = 7
text = "john doe"
caret_blink = true

[node name="ok" type="Button" parent="GameOverPopUp/VBoxContainer"]
margin_top = 129.0
margin_right = 305.0
margin_bottom = 158.0
size_flags_vertical = 7
text = "OK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="GameOverPopUp/VBoxContainer/ok" to="." method="_on_ok_pressed"]
